--- a/mkcpu.cabal
+++ b/mkcpu.cabal
@@ -3,7 +3,7 @@
 
 name:                mkcpu
 version:             0.1.0.0
-synopsis:            Simulation of CPU
+synopsis:            Simulation of CPU(TD4)
 -- description:         
 homepage:            https://github.com/eijian/mkcpu
 license:             BSD3
@@ -16,10 +16,33 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
-executable mkcpu
-  main-is:             Main.hs
+--
+-- EXEC
+--
+
+executable td4
+  default-language:    Haskell2010
+  hs-source-dirs:      src
+  ghc-options:         -threaded -Wall
+  main-is:             Main-td4.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9
-  hs-source-dirs:      src
+  build-depends:       base >= 4.8 && < 5
+
+--
+-- TEST
+--
+
+Test-Suite doctest
   default-language:    Haskell2010
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+                     , src
+                     , src/Logic
+  ghc-options:         -threaded -Wall
+  main-is:             doctests.hs
+  build-depends:       base >= 4.8 && < 5  
+                     , doctest >= 0.9.3
+
+
+
