--- a/mkcpu.cabal
+++ b/mkcpu.cabal
@@ -29,6 +29,16 @@ executable td4
   -- other-extensions:    
   build-depends:       base >= 4 && < 5
 
+executable td4asm
+  default-language:    Haskell2010
+  hs-source-dirs:      src
+  ghc-options:         -threaded -Wall
+  main-is:             Main-asm.hs
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >= 4 && < 5
+                     , parsec
+
 --
 -- TEST
 --
